Added gamepicks and gamepick ui
